--- a/style.css
+++ b/style.css
@@ -1,1 +1,226 @@
-padding
+* {
+    font-family: 'Roboto', sans-serif;
+    
+    margin: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    box-sizing: border-box;
+    line-height: 1.6;
+}
+
+html {
+    scroll-behavior: smooth; 
+  }
+
+body {
+    background-color: rgb(243, 243, 243);
+    min-height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+a:active {
+    color: #666666;
+}
+
+a:visited {
+    color: #ac6dac;
+}
+
+a:hover {
+    color: #778899;
+}
+
+.nav {
+    margin: 10px 10px;
+    text-align: center;
+    
+}
+
+.nav li{
+    display: inline;
+    color: #000000; 
+    margin-right: 10px;
+    
+}
+
+.nav-link {
+    color: #ffffff;
+    padding: 5px 20px;
+    line-height: 50px;
+    font-size: 22px;
+    
+}
+
+
+
+
+.avatar {
+    width:200px;
+    height:200px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
+
+.header {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    margin: 50px auto 10px;
+}
+
+.title {
+    justify-content: space-between;
+    margin-left: 20px;
+    text-align: left;
+    
+    font-size: 1.3rem;
+}
+
+.title p {
+    color: #666666;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.about {
+    margin-top: 10px;
+    font-weight: normal;
+}
+
+.color-1 {
+    border-radius: 10px;
+    background-color: #FFF5EE;
+    padding: 10px 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.color-2 {
+    border-radius: 10px;
+    background-color: #FFFFF0;
+    padding: 10px 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.color-3 {
+    border-radius: 10px;
+    background-color: #FFFFF0;
+    padding: 10px 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.color-4 {
+    border-radius: 10px;
+    background-color: #FFF0F5;
+    padding: 10px 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.color-5 {
+    border-radius: 10px;
+    background-color: #000000;
+    padding: 10px 10px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.text-code {
+    display: block;
+}
+
+
+.text-title {
+    padding-left: 23px;
+    
+}
+
+.text-info {
+    color: #666666;
+}
+
+.text-link {
+    padding-left: 23px;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.footer {
+    display: flex;
+    height: 100px;
+    background-color: #696969;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.git {
+    width: 60px;
+    height: 60px;
+    padding-top: 5px;
+    }
+
+.git-link {
+    flex: 1 1 auto;  
+    }
+
+.year {
+    flex: 1 1 auto;
+    }
+
+.rs {
+    width: 80px;
+    height: 30px;
+    flex: 1 1 auto;
+    }
+
+    @media (max-width: 740px) {
+.header {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-right: 20px;
+}
+.title {
+    text-align: center;
+}
+
+
+    }
+
+    @media (max-width: 586px) {
+        .nav ul{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
